fix: Desarrollo corregido SecurityConfig